# umbra

./: .gitignore  .gitmodules  Makefile  README.md  debug.sh  driver_dev_README.md  rebuild_all.sh  settings copy.sh  settings.sh
.github/actions/install-arm-toolchain/: action.yml
.github/workflows/: build.yml  docs.yml
book/: book.toml
book/src/: SUMMARY.md  contributing.md  introduction.md
book/src/api/: nsc-veneers.md
book/src/architecture/: boot-flow.md  crate-structure.md  ess-model.md  fsbl-boot.md  overview.md
book/src/examples/: README.md  bare-metal.md  freertos.md  object-detection.md
book/src/formal/: proverif.md
book/src/getting-started/: build-and-run.md  hardware-setup.md  prerequisites.md
book/src/hardware/: stm32l552.md  stm32l562.md  stm32n657.md
book/src/porting/: porting-a-new-board.md
host/: .gitignore
host/bare_metal_arm/: Makefile  tst
host/bare_metal_arm/app/: counter.c  fibonacci.c
host/bare_metal_arm/inc/: fibonacci.h
host/bare_metal_arm/linker/: host.ld  memory.ld
host/bare_metal_arm/src/: main.c  startup.s
host/bare_metal_n657/: Makefile
host/bare_metal_n657/app/: fibonacci.c
host/bare_metal_n657/inc/: fibonacci.h
host/bare_metal_n657/linker/: memory.ld  sections.ld
host/bare_metal_n657/src/: main.c  startup.s
host/common/inc/: umbra_hex.h
host/common/src/: umbra_hex.c  umbra_mem.c
host/freertos_arm/: Makefile
host/freertos_arm/inc/: fibonacci.h
host/freertos_arm/linker/: host.ld  memory.ld
host/freertos_arm/src/: FreeRTOSConfig.h  handlers.c  main.c  mem.c  startup.s  vectors.c
host/freertos_n657/: Makefile
host/freertos_n657/app/: fibonacci.c
host/freertos_n657/inc/: fibonacci.h
host/freertos_n657/linker/: host.ld  memory.ld
host/freertos_n657/src/: FreeRTOSConfig.h  handlers.c  main.c  port_overrides.c  startup.s
host/object_detection_n657/: Makefile
host/object_detection_n657/Model/NUCLEO-N657X0-Q/: network.c  network_ecblobs.h  network_generate_report.txt  quantized_tiny_yolo_v2_224__OE_3_1_0_Q.json
host/object_detection_n657/Model/regen/: generate-umbra.sh  stm32n6-umbra.mpool  user_neuralart_umbra.json
host/object_detection_n657/app/: inference.c  inference.h
host/object_detection_n657/inc/: postprocess.h  test_image.h
host/object_detection_n657/linker/: host.ld  memory.ld
host/object_detection_n657/src/: handlers.c  main.c  postprocess.c  startup.s  test_image.c
linker/: umbra.ld
openocd_scripts/: stm32h573.cfg  stm32l5x.cfg  stm32n6x.cfg
scripts/: board_config.sh  environment.sh  format.sh  shell.sh
src/: README_UMBRA_DEV.md
src/hardware/architecture/: .gitignore
src/hardware/architecture/arm/: Cargo.toml
src/hardware/architecture/arm/asm/: startup.s
src/hardware/architecture/arm/src/: lib.rs  mmio.rs  mpu.rs  sau.rs  startup.rs
src/hardware/common/: .gitignore
src/hardware/common/peripheral_regs/: Cargo.toml
src/hardware/common/peripheral_regs/src/: lib.rs
src/hardware/platform/: .gitignore
src/hardware/platform/stm32l552/boot/: Cargo.toml  build.rs
src/hardware/platform/stm32l552/boot/.cargo/: config.toml
src/hardware/platform/stm32l552/boot/asm/arm/: trampoline.s
src/hardware/platform/stm32l552/boot/src/: api_impl.rs  benchmark.rs  crypto_impl.rs  handlers.rs  key_derivation.rs  main.rs  master_key.rs  platform_impl.rs  prefetch.rs  raw_print.rs  secure_kernel.rs  validator.rs
src/hardware/platform/stm32l552/drivers/: Cargo.toml
src/hardware/platform/stm32l552/drivers/src/: aes.rs  cycles.rs  dma.rs  gpio.rs  gtzc.rs  hash.rs  lib.rs  ofd.rs  ospi.rs  pwr.rs  rcc.rs  uart.rs
src/hardware/platform/stm32l552/linker/: platform.ld
src/hardware/platform/stm32n657/boot/: Cargo.toml  build.rs
src/hardware/platform/stm32n657/boot/.cargo/: config.toml
src/hardware/platform/stm32n657/boot/asm/arm/: startup_n657.s  trampoline.s
src/hardware/platform/stm32n657/boot/src/: api_impl.rs  boot_measurements.rs  crypto_impl.rs  handlers.rs  key_derivation.rs  main.rs  platform_impl.rs  raw_print.rs  secure_kernel.rs  validator.rs
src/hardware/platform/stm32n657/drivers/: Cargo.toml
src/hardware/platform/stm32n657/drivers/src/: aes.rs  cryp.rs  gpio.rs  hash.rs  lib.rs  mce.rs  rcc.rs  risaf.rs  uart.rs
src/hardware/platform/stm32n657/linker/: platform.ld
src/kernel/: .gitignore  Cargo.toml
src/kernel/.cargo/: config.toml
src/kernel/asm/arm/: nsc_veneers.s
src/kernel/src/: lib.rs  panic.rs  umbra_nsc_api.rs
src/kernel/src/common/: enclave.rs  ess.rs  memory_layout.rs  mod.rs
src/kernel/src/key_storage_server/: crypto.rs  key_generator.rs  key_store.rs  mod.rs
src/kernel/src/memory_protection_server/: memory_guard.rs  memory_validation.rs  mod.rs
src/kernel/src/platform/: mod.rs
tools/: README.md  corrupt_enclave.py  erase_xspi2_n657.sh  extract_bytecode.py  flash_n657.sh  gen_key.py  image_to_c_array.py  measure_blobs.py  protect_enclave.py  sim_vbat_loss_n657.sh  smoke_test.sh  smoke_test_fault.sh  smoke_test_fault_runtime.sh  smoke_test_lib.sh  test_e4c_manual.md
