[package]
name = "boot"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
arm = { path = "../../../architecture/arm" }
drivers = { path = "../drivers" }
kernel = { path = "../../../../kernel", default-features = false, features = ["platform-l552"] }
peripheral_regs = { path = "../../../common/peripheral_regs" }

[features]
default = ["chained_measurement", "ess_miss_recovery", "boot_tests"]
boot_tests = []
stm32l562 = ["drivers/stm32l562"]
chained_measurement = []
ess_miss_recovery = []
benchmark = []
# Required alongside `benchmark` to acknowledge that this feature is research
# instrumentation, not for production firmware. Keeps `cargo build --features
# benchmark` from silently producing a boot-bricking image.
i_acknowledge_benchmark_is_research_only = []


[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = 0