[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
peripheral_regs = { path = "../../../common/peripheral_regs" }
# Platform-agnostic — boot crate selects the kernel platform feature.
# NOTE: cannot be `cargo check`ed in isolation; build via the boot crate
# (see arm/Cargo.toml for the longer explanation).
kernel = { path = "../../../../kernel", default-features = false }
# cortex-m wrappers for ARM v8-M assembly (dsb/isb/wfi etc).
# Drivers issue these barriers around peripheral writes; using the
# typed wrappers avoids raw `core::arch::asm!` blocks.
cortex-m = "0.7"
